Strona Główna - Tytuł

--- a/strona/index.html
+++ b/strona/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+Ôªø<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,6 +7,8 @@
     <title>Document</title>
 </head>
 <body>
-    Strona g≥Ûwna
+    <h1>Strona g≈Ç√≥wna</h1>
+
+
 </body>
 </html>
