Podstrona Git Init

--- a/strona/index.html
+++ b/strona/index.html
@@ -9,6 +9,10 @@
 <body>
     <h1>Strona główna</h1>
 
+    <h3>Praca lokalna</h3>
+    <ul>
+        <li><a href="praca-lokalna/init.html">Init</a></li>
+    </ul>
 
 </body>
 </html>
