--- a/strona/index.html
+++ b/strona/index.html
@@ -1,4 +1,5 @@
-﻿<!DOCTYPE html>
+
+<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -7,7 +8,7 @@
     <title>Document</title>
 </head>
 <body>
-    <h1>Strona główna</h1>
+    Strona główna 
 
     <h3>Praca lokalna</h3>
     <ul>
