--- a/strona/index.html
+++ b/strona/index.html
@@ -1,5 +1,4 @@
-
-<!DOCTYPE html>
+﻿<!DOCTYPE html>
 <html lang="en">
 <head>
     <meta charset="UTF-8">
@@ -8,7 +7,7 @@
     <title>Document</title>
 </head>
 <body>
-    Strona główna 
+    <h1>Strona główna</h1>
 
     <h3>Praca lokalna</h3>
     <ul>
