--- a/strona/index.html
+++ b/strona/index.html
@@ -12,6 +12,7 @@
     <h3>Praca lokalna</h3>
     <ul>
         <li><a href="praca-lokalna/init.html">Init</a></li>
+        <li><a href="praca-lokalna/config.html">Config</a></li>
     </ul>
 
 </body>
