--- a/strona/index.html
+++ b/strona/index.html
@@ -15,5 +15,11 @@
         <li><a href="praca-lokalna/config.html">Config</a></li>
     </ul>
 
+    <h3>Praca na historii</h3>
+    <ul>
+        <li><a href="praca-lokalna/log.html">Log</a></li> 
+    </ul>
+
+
 </body>
 </html>
