Poprawianie - revert, reset, checkout

--- a/strona/index.html
+++ b/strona/index.html
@@ -17,7 +17,17 @@
 
     <h3>Praca na historii</h3>
     <ul>
-        <li><a href="praca-lokalna/log.html">Log</a></li> 
+        <li><a href="praca-lokalna/log.html">Log</a></li>
+    </ul>
+
+    <h3>Poprawianie</h3>
+    <ul>
+        <li><a href="praca-lokalna/revert.html">Revert</a></li>
+        <li><a href="praca-lokalna/amend.html">Commit --amend</a></li>
+        <li><a href="praca-lokalna/reset.html">Reset --mixed / --hard </a></li>
+
+        <li><a href="praca-lokalna/checkout.html">Checkout commit -- plik </a></li>
+        <li><a href="praca-lokalna/checkout.html">Checkout galaz </a></li>
     </ul>
 
 
