Git switch = git checkout branch

--- a/strona/index.html
+++ b/strona/index.html
@@ -28,6 +28,7 @@
 
         <li><a href="praca-lokalna/checkout.html">Checkout commit -- plik </a></li>
         <li><a href="praca-lokalna/checkout.html">Checkout galaz </a></li>
+        <li><a href="praca-lokalna/switch.html">switch galaz </a></li>
     </ul>
 
 
