--- a/strona/index.html
+++ b/strona/index.html
@@ -5,32 +5,57 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
 </head>
 <body>
-    <h1>Strona główna</h1>
+    <div class="container">
+        <div class="row">
+            <div class="col">
+                <h1 class="display-4">Strona główna</h1>
 
-    <h3>Praca lokalna</h3>
-    <ul>
-        <li><a href="praca-lokalna/init.html">Init</a></li>
-        <li><a href="praca-lokalna/config.html">Config</a></li>
-    </ul>
+                <h3>Praca lokalna</h3>
+                <ul>
+                    <li>
+                        <a href="praca-lokalna/init.html">Init</a>
+                    </li>
+                    <li>
+                        <a href="praca-lokalna/config.html">Config</a>
+                    </li>
+                </ul>
 
-    <h3>Praca na historii</h3>
-    <ul>
-        <li><a href="praca-lokalna/log.html">Log</a></li>
-    </ul>
+                <h3>Praca na historii</h3>
+                <ul>
+                    <li>
+                        <a href="praca-lokalna/log.html">Log</a>
+                    </li>
+                </ul>
 
-    <h3>Poprawianie</h3>
-    <ul>
-        <li><a href="praca-lokalna/revert.html">Revert</a></li>
-        <li><a href="praca-lokalna/amend.html">Commit --amend</a></li>
-        <li><a href="praca-lokalna/reset.html">Reset --mixed / --hard </a></li>
+                <h3>Poprawianie</h3>
+                <ul>
+                    <li>
+                        <a href="praca-lokalna/revert.html">Revert</a>
+                    </li>
+                    <li>
+                        <a href="praca-lokalna/amend.html">Commit --amend</a>
+                    </li>
+                    <li>
+                        <a href="praca-lokalna/reset.html">Reset --mixed / --hard </a>
+                    </li>
 
-        <li><a href="praca-lokalna/checkout.html">Checkout commit -- plik </a></li>
-        <li><a href="praca-lokalna/checkout.html">Checkout galaz </a></li>
-        <li><a href="praca-lokalna/switch.html">switch galaz </a></li>
-    </ul>
+                    <li>
+                        <a href="praca-lokalna/checkout.html">Checkout commit -- plik </a>
+                    </li>
+                    <li>
+                        <a href="praca-lokalna/checkout.html">Checkout galaz </a>
+                    </li>
+                    <li>
+                        <a href="praca-lokalna/switch.html">Switch galaz </a>
+                    </li>
+                </ul>
 
+            </div>
+        </div>
+    </div>
 
 </body>
 </html>
