--- a/strona/index.html
+++ b/strona/index.html
@@ -53,6 +53,10 @@
                     </li>
                 </ul>
 
+                <footer>
+                    <h3>Stopka</h3>
+                    <a href="rodo.html">Polityka Prywatności</a>
+                </footer>
             </div>
         </div>
     </div>
