--- a/strona/index.html
+++ b/strona/index.html
@@ -11,6 +11,7 @@
     <div class="container">
         <div class="row">
             <div class="col">
+                <img src="images/logo@2x.png" />
                 <h1 class="display-4">Strona główna</h1>
 
                 <h3>Praca lokalna</h3>
