--- a/strona/index.html
+++ b/strona/index.html
@@ -11,8 +11,10 @@
     <div class="container">
         <div class="row">
             <div class="col">
-                <img src="images/logo@2x.png" />
-                <h1 class="display-4">Strona główna</h1>
+                <header>
+                    <img src="images/logo@2x.png" />
+                    <h1 class="display-4">Strona główna</h1>
+                </header>
 
                 <h3>Praca lokalna</h3>
                 <ul>
