Praca równoległa - Git Branch

--- a/strona/index.html
+++ b/strona/index.html
@@ -56,6 +56,13 @@
                     </li>
                 </ul>
 
+                <h3>Praca równoległa</h3>
+                <ul>
+                    <li>
+                        <a href="praca-na-galeziach/branch.html">Branch </a>
+                    </li>
+                </ul>
+
                 <footer>
                     <h3>Stopka</h3>
                     <a href="rodo.html">Polityka Prywatności</a>
