--- a/strona/index.html
+++ b/strona/index.html
@@ -21,6 +21,7 @@
                     <li>
                         <a href="praca-lokalna/init.html">Init</a>
                     </li>
+                    <li>Add</li>
                     <li>
                         <a href="praca-lokalna/config.html">Config</a>
                     </li>
