--- a/strona/index.html
+++ b/strona/index.html
@@ -31,6 +31,7 @@
                     <li>
                         <a href="praca-lokalna/log.html">Log</a>
                     </li>
+                    <li>Reflog - historia HEAD</li>
                 </ul>
 
                 <h3>Poprawianie</h3>
