--- a/strona/index.html
+++ b/strona/index.html
@@ -21,10 +21,11 @@
                     <li>
                         <a href="praca-lokalna/init.html">Init</a>
                     </li>
-                    <li>Add</li>
                     <li>
                         <a href="praca-lokalna/config.html">Config</a>
                     </li>
+                    <li>Add</li>
+                    <li>Commit</li>
                 </ul>
 
                 <h3>Praca na historii</h3>
