--- a/strona/index.html
+++ b/strona/index.html
@@ -32,6 +32,7 @@
                         <a href="praca-lokalna/log.html">Log</a>
                     </li>
                     <li>Reflog - historia HEAD</li>
+                    <li>Show</li>
                 </ul>
 
                 <h3>Poprawianie</h3>
