--- a/strona/index.html
+++ b/strona/index.html
@@ -33,6 +33,7 @@
                     </li>
                     <li>Reflog - historia HEAD</li>
                     <li>Show</li>
+                    <li>Diff - porównaj pliki lub commity</li>
                 </ul>
 
                 <h3>Poprawianie</h3>
