--- a/strona/index.html
+++ b/strona/index.html
@@ -18,10 +18,10 @@
 
                 <h3>Praca lokalna</h3>
                 <ul>
-                    <li>
+                    <li class="promocja">
                         <a href="praca-lokalna/init.html">Init</a>
                     </li>
-                    <li>
+                    <li class="promocja">
                         <a href="praca-lokalna/config.html">Config</a>
                     </li>
                 </ul>
