--- a/strona/index.html
+++ b/strona/index.html
@@ -64,6 +64,7 @@
                     <li>
                         <a href="praca-na-galeziach/branch.html">Branch </a>
                     </li>
+                    <li>Clone</li>
                 </ul>
 
                 <footer>
