--- a/strona/index.html
+++ b/strona/index.html
@@ -65,6 +65,7 @@
                         <a href="praca-na-galeziach/branch.html">Branch </a>
                     </li>
                     <li>Clone</li>
+                    <li>Fetch</li>
                 </ul>
 
                 <footer>
