--- a/strona/index.html
+++ b/strona/index.html
@@ -67,6 +67,7 @@
                     <li>Clone</li>
                     <li>Fetch</li>
                     <li>Tracking -  git pull --set-upstream origin master</li>
+                    <li>Pull</li>
                 </ul>
 
                 <footer>
