--- a/strona/index.html
+++ b/strona/index.html
@@ -66,6 +66,7 @@
                     </li>
                     <li>Clone</li>
                     <li>Fetch</li>
+                    <li>Tracking -  git pull --set-upstream origin master</li>
                 </ul>
 
                 <footer>
