--- a/strona/index.html
+++ b/strona/index.html
@@ -68,6 +68,7 @@
                     <li>Fetch</li>
                     <li>Tracking -  git pull --set-upstream origin master</li>
                     <li>Pull</li>
+                    <li>Push</li>
                 </ul>
 
                 <footer>
