--- a/strona/index.html
+++ b/strona/index.html
@@ -69,6 +69,7 @@
                     <li>Tracking -  git pull --set-upstream origin master</li>
                     <li>Pull</li>
                     <li>Push</li>
+                    <li>Fork</li>
                 </ul>
 
                 <footer>
