Praca z Github / Bitbucket / Git Lab / ...

--- a/strona/index.html
+++ b/strona/index.html
@@ -70,6 +70,8 @@
                     <li>Pull</li>
                     <li>Push</li>
                     <li>Fork - clone on remote server</li>
+
+                    <li>Github</li>
                 </ul>
 
                 <footer>
